# pyconsg-2026-testing-workshop

./: README.md
kopibot/: README.md  pyproject.toml
kopibot/src/kopibot/: main.py
kopibot/tests/: test_parse.py
slides/: 20260621-pycon-testing.html  20260621-pycon-testing.md
